--- a/src/vs2010/Stellar.Core/Stellar.Core.csproj
+++ b/src/vs2010/Stellar.Core/Stellar.Core.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>6652b8cd-543d-43c7-8df9-57bb18916dab</ProjectGuid>
+    <ProjectGuid>{74C25165-B6BF-428E-B603-0BC1917B616A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Stellar.Core</RootNamespace>
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,7 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Products\ProductionRule.cs" />
+    <Compile Include="Repository\BasicRepository.cs" />
+    <Compile Include="Repository\IRepository.cs" />
+    <Compile Include="Products\Product.cs" />
+    <Compile Include="Products\Supply.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
