--- a/src/vs2010/Stellar.DataAccess/Stellar.DataAccess.csproj
+++ b/src/vs2010/Stellar.DataAccess/Stellar.DataAccess.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>0526ed57-62c3-46b1-8270-e90e60933322</ProjectGuid>
+    <ProjectGuid>{3B8ABBA3-B23F-4914-8C62-60110E980058}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Stellar.DataAccess</RootNamespace>
@@ -40,7 +40,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
