--- a/src/vs2010/packages/repositories.config
+++ b/src/vs2010/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Stellar.Core\packages.config" />
+  <repository path="..\Stellar.Tests\packages.config" />
 </repositories>
