--- a/src/vs2010/settings/UppercuT.config
+++ b/src/vs2010/settings/UppercuT.config
@@ -4,10 +4,10 @@
   <!-- Learn how to edit this file at http://uppercut.pbwiki.com -->
 
   <!-- Required Items -->
-  <property name="project.name" value="__SOLUTION_NAME_WITHOUT_SLN_EXTENSION__" overwrite="false" />
+  <property name="project.name" value="Stellar Trader" overwrite="false" />
   <property name="path_to_solution" value="." overwrite="false" />
-  <property name="repository.path" value="__REPOSITORY_PATH__" overwrite="false" />
-  <property name="company.name" value="__COMPANY_NAME__" overwrite="false" />
+  <property name="repository.path" value="git://github.com/Kintar/Stellar-Trader.git" overwrite="false" />
+  <property name="company.name" value="Infinities Within" overwrite="false" />
 
   <!-- folders -->
   <property name="folder.database" value="${project.name}.Database" overwrite="false" />
@@ -39,11 +39,11 @@
   <!-- ASSEMBLY VARIABLES -->
   <property name="version.use_semanticversioning" value="true" overwrite="false" />
   <property name="version.major" value="0" overwrite="false" />
-  <property name="version.minor" value="0" overwrite="false" />
+  <property name="version.minor" value="1" overwrite="false" />
   <property name="version.patch" value="0" overwrite="false" />
   <property name="version.gem.suffix" value="" overwrite="false" />
   <property name="use.gem.build_date" value="false" overwrite="false" />
-  <property name="assembly.description" value="${project.name} is a product of ${company.name} - ${repository.path}." overwrite="false" />
+  <property name="assembly.description" value="${project.name} - Copyright 2011, Alec Lanter - ${repository.path}." overwrite="false" />
   <property name="assembly.clscompliant" value="true" overwrite="false" />
   <!-- partially trusted callers doesn't set correctly with assembly generator - Leave false for now-->
   <property name="allow.partially_trusted_callers" value="false" overwrite="false" />
