Ammended last commit - forgot to save the freaking solution again.

--- a/src/vs2010/Stellar.DataAccess/Stellar.DataAccess.csproj
+++ b/src/vs2010/Stellar.DataAccess/Stellar.DataAccess.csproj
@@ -55,6 +55,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>$(SolutionDir)\lib\nuget\nuget.exe install $(ProjectDir)\packages.config -o $(SolutionDir)\packages</PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
