Keep forgetting to save project and solution files in VS. :P

--- a/src/vs2010/Stellar.Economy/Stellar.Economy.csproj
+++ b/src/vs2010/Stellar.Economy/Stellar.Economy.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EconomySystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
